[gd_scene load_steps=12 format=2]

[ext_resource path="res://levels/level_1/Control.gd" type="Script" id=1]
[ext_resource path="res://theme/demo_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/mascara.png" type="Texture" id=3]
[ext_resource path="res://assets/info_mask.png" type="Texture" id=4]
[ext_resource path="res://assets/llave.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.4, 0.890196, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0313726, 0.427451, 0.188235, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.137255, 0.6, 0.278431, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.847059, 0.188235, 0.0509804, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.980392, 0.454902, 0.0509804, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.145098, 0.129412, 0.129412, 1 )

[node name="UI" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="score" type="Label" parent="Control"]
margin_left = 2.0
margin_right = 120.0
margin_bottom = 48.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.976471, 0.141176, 0.0313726, 1 )
custom_colors/font_color_shadow = Color( 0.815686, 0.827451, 0.796078, 1 )
text = "OXYGEN"
align = 1
valign = 1

[node name="vida" type="Label" parent="Control"]
margin_left = 292.932
margin_top = 5.26266
margin_right = 399.932
margin_bottom = 40.2627
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.270588, 0.976471, 0.313726, 1 )
custom_colors/font_color_shadow = Color( 0.933333, 0.933333, 0.933333, 1 )
text = "LIFE"
align = 1
valign = 1

[node name="agua" type="Label" parent="Control"]
margin_left = 573.76
margin_top = 3.87727
margin_right = 646.76
margin_bottom = 38.8773
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.470588, 0.588235, 0.945098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.980392, 0.972549, 0.972549, 1 )
text = "WATER"
align = 1
valign = 1

[node name="LevelWater" type="ProgressBar" parent="Control"]
margin_left = 661.0
margin_right = 834.0
margin_bottom = 39.0
theme = ExtResource( 2 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
value = 100.0

[node name="LevelLife" type="ProgressBar" parent="Control"]
anchor_right = 1.0
margin_left = 394.0
margin_right = 516.0
margin_bottom = 38.0
theme = ExtResource( 2 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
max_value = 1000.0
value = 1000.0

[node name="LevelOxigeno" type="ProgressBar" parent="Control"]
margin_left = 127.0
margin_top = 1.0
margin_right = 296.0
margin_bottom = 38.0
theme = ExtResource( 2 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
custom_colors/font_color = Color( 0.980392, 0.941176, 0.941176, 0 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
max_value = 2000.0
value = 2000.0

[node name="mask" type="Sprite" parent="Control"]
position = Vector2( 210.045, 19.0025 )
scale = Vector2( 0.0583647, 0.102907 )
texture = ExtResource( 3 )
region_enabled = true

[node name="info" type="Sprite" parent="Control"]
position = Vector2( 210.484, 51.7148 )
scale = Vector2( 0.261999, 0.432519 )
texture = ExtResource( 4 )
region_enabled = true

[node name="llave" type="Sprite" parent="Control"]
position = Vector2( 956.257, 20.3395 )
scale = Vector2( 0.17215, 0.147115 )
texture = ExtResource( 5 )
region_enabled = true
